Tue Nov 27 18:47:15 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Metric2D.java: New getBounds2D()
	method to compute the bounding box of this ellipse.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: New getBounds() method
	to return the bounding box of a metric at a given vertex.
	* src/org/jcae/mesh/amibe/util/KdTree.java: Use Mesh.getBounds()
	in getNearestVertex() to reduce the number of cells considered.

Mon Nov 26 15:22:22 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Check triangle
	centroid only if at least one edge is large to avoid many useless
	computations.
	* src/org/jcae/mesh/amibe/util/KdTree.java (getNearestVertex):
	If vertex is linked to a triangle, its vertices may be better
	candidates than the one returned by getNearVertex().  This
	dramatically speeds up getNearestVertex() with very large trees.
	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Link candidate
	vertices to their surrounding triangle to speed up getNearestVertex().

Sat Nov 24 12:12:25 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* **/*.java: 1d, 2d and 3d XML file names are hardcoded, so define
	them into JCAEXMLData.java and remove xml file name from mesh readers
	and writers.
	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObject3D): If 
	brepFile is null, do not write <shape> element.

Fri Nov 23 11:10:14 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java: Copy CAD file into output directory.
	Output directory is then consistent and can be moved or copied into
	into another location.
	* src/org/jcae/mesh/xmldata/MMesh1DWriter.java
	  src/org/jcae/mesh/xmldata/MeshWriter.java: Remove brep directory
	from arguments of writeObject() and writeObject3D() methods.
	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Disable
	ridge detection, it is broken.
