@@ -1,3 +1,9 @@
+Wed Nov 28 12:27:25 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/validation/QualityFloat.java: Let qavg and
+	qavg2 members be double values, otherwise standard deviation may be
+	miscomputed with very large data collections.
+
 Tue Nov 27 18:47:15 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/metrics/Metric2D.java: New getBounds2D()
